--- a/style/shop-style.css
+++ b/style/shop-style.css
@@ -406,36 +406,8 @@ header {
 
 
 
-@media (width<600px){
-  header{
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-
-
-  }
-
-  .header-ls .h2{
-      font-size: 30px;
-
-
-  }
-
-  .header-center{
-      display: none;
-
-  }
-
-  .burger{
-      display: flex;
-      align-items: center;
-      /* border: solid; */
-      /* display: ; */
-  }
-
-  .header-rs{
-      display: none;
-  }
+@media (width<780px){
+  
 
 
 
@@ -557,26 +529,36 @@ header {
 
   .body4-data{
     width: 100%;
-    /* margin: auto; */
+    height: 100%;
 
   }
 
   .body4-data{
+
+    width: 100%;
+    height: 100%;
+
+  }
+  .body4-data ul{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
   }
 
   .body4-data ul li{
-    /* font-size: 20px; */
-    /* width: 50%; */
-    margin: 15px;
-    /* margin: auto; */
     width: 100%;
-  }
 
+    margin: 5px 0px;
+    padding: 7px 0px;
+    display: flex;
+    justify-content: center;
+
+    
+  }
+  
   .body4-data ul li a{
-    font-size: 20px;
-    width:fit-content;
+
+    font-size: 25px;
+    font-weight: 800;
   }
 
 
@@ -650,7 +632,7 @@ header {
 
   .body7-1 p{
       width: 50%;
-      font-size: 18px;
+      font-size: 15px;
       /* color: red; */
   
   }
